# dpypeline

./: .gitignore  .pre-commit-config.yaml  README.md  a.py  akita.py  cf_checker.py  dataset_handling.py  docker_compose.yml  input.json  jasmin_object_store_credentials.json  main.py  object_store.py  parse_input_json.py  pyproject.toml  queue_state.pickle  requirements.txt  set_env_variables.sh  start.sh  start_celery_worker.sh
.github/: main.yml
.github/workflows/: main.yml  main_build.yml
akita/: __init__.py  akita.py  core.py  file_handler.py  queue_events.py
celery_app/: celery_config.py
celery_app/tasks/: xarray.py
conda-recipe/: meta.yaml
data_handling/: cf_checker.py  dataset_handling.py
docs/source/: conf.py  index.rst
docs/source/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
etl/: actions.py  actions_base.py  etl_base.py  etl_pipeline.py  extract.py  load.py  misc_actions.py  transform.py
etl_pipeline/: __init__.py  celery_pipeline.py  etl_pipeline.py  thread_pipeline.py
event_consumer/: __init__.py  event_consumer.py
examples/: credentials.json  directory_state.pickle  example_celery.py  example_dask.py  example_thread.py  queue_state.pickle  thread_pipeline_tasks.py
examples/cmd_line_inputs/: imports.yaml  pipeline_parallel.yaml  pipeline_serial.yaml
examples/example_1/: README.md  example_1_parallel.py  example_1_parallel.yaml  example_1_serial.py  example_1_serial.yaml  example_1_tasks.py
examples/example_1/2023/: 01001099999.csv  01001499999.csv  01002099999.csv  01003099999.csv  01006099999.csv  01007099999.csv  01008099999.csv  01009099999.csv  01010099999.csv  01011099999.csv  01015099999.csv  01016099999.csv  01017099999.csv  01020099999.csv  01023099999.csv  01023199999.csv  01024099999.csv  01025099999.csv  01026099999.csv  01027099999.csv  01028099999.csv  01030099999.csv  01033099999.csv  01035099999.csv  01037099999.csv  01042099999.csv  01043099999.csv  01044099999.csv  01045099999.csv  01046099999.csv  01047099999.csv  01049099999.csv  01052099999.csv  01055099999.csv  01058099999.csv  01059099999.csv  01062099999.csv  01065099999.csv  01068099999.csv  01074099999.csv  (+2537 more)
examples/example_2/: README.md
examples/example_3/: README.md
examples/scripts_api/: example_celery.py  example_dask.py  example_thread.py  thread_pipeline_tasks.py
filesystems/: __init__.py  object_store.py
performance_benchmark/: performance_plots.py  performance_utils.py  plots_annual_full_time_area_average.ipynb  plots_annual_mean_depth_profile_grid.ipynb  plots_annual_mean_optimal.ipynb  plots_annual_mean_surface_layer.ipynb  plots_global.ipynb
performance_benchmark/benchmark_data/csv_files/: performance_annual_mean_depth_profile_grid.csv  performance_annual_mean_surface_layer.csv  performance_annual_mean_surface_layer_multiple_nodes.csv  performance_annual_mean_surface_layer_nike.csv  performance_annual_mean_surface_layer_themis.csv  performance_full_time_area_average.csv
src/: __init__.py
src/celery_app/: __init__.py  app.py
src/dpypeline/: __init__.py
src/dpypeline/akita/: __init__.py  core.py  directory_state.py  event_handler.py  factory.py  queue_events.py
src/dpypeline/celery/: __init__.py  app.py  config.py
src/etl_pipeline/: celery_pipeline.py
src/event_consumer/: __init__.py
tests/: _utils.py  conftest.py  test_akita.py  test_directory_state.py  test_etl_pipeline_core.py  test_job.py  test_queue.py  utils.py
utils/: argument_parser.py  dataset_template.py  docker_compose.yml  start_flower.sh  start_rabbitmq.sh
utils/todo/: index.zmetadata  rename_metadata.py
(+105 files in other folders)
